src/snapshots/alma__infer__tests__test_infer_expression__pattern_matching_if_condition-2.snap
---
source: src/infer.rs
assertion_line: 3012
expression: "infer(\"\\\nwhen 5 is\n    n if n - 5 -> n\n            \")"
---
Input:

when 5 is
    n if n - 5 -> n
            

---
Output:

Test.alma [4:9]

Type mismatch:  Float  ≠  Bool

Expected

  2│  
  3│  test = when 5 is
  4│      n if n - 5 -> n
   │           ↑↑↑↑↑
  5│              

to be

    Bool

but seems to be

    Float
