src/snapshots/alma__infer__tests__test_infer_expression__pattern_matching_records-4.snap
---
source: src/infer.rs
assertion_line: 3104
expression: "infer(\"\\\nwhen {x: 5, y: 3} is\n    {x: 5 | 7, y} -> y\n    {x: ( 1 | 3 ) as x} -> x\n\")"
---
Input:

when {x: 5, y: 3} is
    {x: 5 | 7, y} -> y
    {x: ( 1 | 3 ) as x} -> x


---
Output:

module Alma



False : ∀ ∅ . Bool

True : ∀ ∅ . Bool



add : ∀ ∅ . Float -> Float -> Float

and_ : ∀ ∅ . Bool -> Bool -> Bool

div : ∀ ∅ . Float -> Float -> Float

eq : ∀ a . a -> a -> Bool

ge : ∀ ∅ . Float -> Float -> Bool

gt : ∀ ∅ . Float -> Float -> Bool

le : ∀ ∅ . Float -> Float -> Bool

lt : ∀ ∅ . Float -> Float -> Bool

mult : ∀ ∅ . Float -> Float -> Float

ne : ∀ a . a -> a -> Bool

or_ : ∀ ∅ . Bool -> Bool -> Bool

sub : ∀ ∅ . Float -> Float -> Float


module Test

test : ∀ ∅ . Float
