src/snapshots/alma__infer__tests__test_infer_expression__property_access-3.snap
---
source: src/infer.rs
assertion_line: 2307
expression: "infer(r#\"{ age = 1, msg = \"Hello\" }.wat\"#)"
---
Input:

{ age = 1, msg = "Hello" }.wat

---
Output:

[3:7]

Type mismatch:  { age : Float, msg : String }  ≠  { a | wat : b }

Expected

  1│  module Test exposing (test)
  2│  
  3│  test = { age = 1, msg = "Hello" }.wat
   │         ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑

to be

{ a | wat : b }

but seems to be

{ age : Float, msg : String }
