src/snapshots/alma__infer__tests__test_infer_expression__property_access-4.snap
---
source: src/infer.rs
assertion_line: 1876
expression: "infer(r#\"let a = \"Hi\" in a.wat\"#)"

---
Input:

let a = "Hi" in a.wat

---
Output:

[1:16]

Type mismatch:  String  ≠  { a | wat : b }

Expected

  1│  let a = "Hi" in a.wat
   │                  ↑

to be

{ a | wat : b }

but seems to be

String
