src/snapshots/alma__infer__tests__test_infer_expression__property_access_shorthand_lambda-3.snap
---
source: src/infer.rs
assertion_line: 1883
expression: "infer(\".name { age = 1 }\")"

---
Input:

.name { age = 1 }

---
Output:

[1:6]

Type mismatch:  { age : Float }  ≠  { a | name : b }

Expected

  1│  .name { age = 1 }
   │        ↑↑↑↑↑↑↑↑↑↑↑

to be

{ a | name : b }

but seems to be

{ age : Float }
