src/snapshots/alma__infer__tests__test_infer_expression__record_update-3.snap
---
source: src/infer.rs
assertion_line: 2323
expression: "infer(\"{ { age = 5 } | age = \\\"Hi\\\" }\")"
---
Input:

{ { age = 5 } | age = "Hi" }

---
Output:

[3:9]

Type mismatch:  { age : Float }  ≠  { a | age : String }

Expected

  1│  module Test exposing (test)
  2│  
  3│  test = { { age = 5 } | age = "Hi" }
   │           ↑↑↑↑↑↑↑↑↑↑↑

to be

{ a | age : String }

but seems to be

{ age : Float }
